Fix page URLs and change active colour
Page URLs no longer have spaces in categories

--- a/_config.yml
+++ b/_config.yml
@@ -139,6 +139,7 @@ defaults:
       path: ""
     values:
       author_profile: false
+      toc_sticky: true
       sidebar:
         nav: "docs"
   # _pages
