--- a/_config.yml
+++ b/_config.yml
@@ -142,6 +142,10 @@ defaults:
       toc_sticky: true
       sidebar:
         nav: "docs"
+  - scope:
+      path: ""
+    values:
+      archive: true
   # _pages
   - scope:
       path: "_pages"
@@ -149,6 +153,7 @@ defaults:
     values:
       layout: single
       permalink: /:basename/
+      archive: false
   # _docs
   - scope:
       path: ""
@@ -157,6 +162,7 @@ defaults:
       layout: single
       permalink: /:categories/:title/
       toc: true
+      archive: false
 
 
 # Sass/SCSS
