[FIX] GitHub username in footer

--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ footer:
       url: "https://demo2.librephotos.com"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/mmistakes"
+      url: "https://github.com/LibrePhotos"
 
 
 # Reading Files
