--- a/_data/categories.yml
+++ b/_data/categories.yml
@@ -5,12 +5,4 @@
 - id: 3
   name: "Contribution"
 - id: 4
-  name: "Dev Resources: Frontend"
-- id: 5
-  name: "Dev Resources: Backend"
-- id: 6
-  name: "Dev Resources: Nginx"
-- id: 7
-  name: "Dev Resources: Redress"
-- id: 8
-  name: "Dev Resources: Docker"
+  name: "Dev Resources"
