--- a/_data/categories.yml
+++ b/_data/categories.yml
@@ -1,12 +1,12 @@
 - id: 1
-  name: "Installation"
+  name: "🚀 Installation"
 - id: 2
-  name: "User Guide"
+  name: "📄 User Guide"
 - id: 3
   name: "Frequently Asked Questions"
 - id: 4
   name: "Data Collection"
 - id: 5
-  name: "Contribution"
+  name: "🔨 Contribution"
 - id: 6
   name: "Dev Resources"
